public/scss/commons.scss
:root {
  --primary-color-cust: #2173a6;
  --primary-color-cust-80: rgba(33, 115, 166, 0.8);
  --accent-color: #e7cc5f;
  --dark-blue: #011c26;
  --dark-grey-color: #567073;
  --grey-color-cust: #8da6a6;
  --white-color-cust: white;
}

.btn-custom {
  cursor: pointer;
  width: 150px;
  display: inline-block;
  font-weight: 400;
  color: var(--dark-blue);
  text-align: center;
  vertical-align: middle;
  user-select: none;
  background-color: var(--accent-color);
  border: 1px solid transparent;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
  margin: 4px 2px;

  &:hover {
    background-color: var(--white-color-cust);
  }
}

.cta {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 50px 0;
}

.cust-cont-center {
  display: flex;
  justify-content: center;
  margin-bottom: 30px;
}

